# calculator-api-recovery

./: .env.example  .gitignore  README.md  build_check.py  calculator.go  calculator_test.go  check_build.py  clear_db.py  core.go  core.py  core_test.go  database.go  db.go  go.mod  go.sum  handlers.go  handlers_test.go  main.go  main_test.go  models.go  pyproject.toml  run_server.py  server.py
.mcode/tests/functional_testing/: m1-042319c1-test_protocol_spec.py  m1-1bade414-test_protocol_spec.py  m1-24ba32f2-test_protocol_spec.py  m1-79d984ad-test_protocol_spec.py  m1-b9e6a98f-test_protocol_spec.py  m1-ba82d79f-test_protocol_spec.py  m1-f4ccd9e7-test_protocol_spec.py  m1-fe023f9a-test_protocol_spec.py  m2-1188d928-test_protocol_spec.py  m2-313eb0f3-test_protocol_spec.py  m2-ae6b22db-test_protocol_spec.py  m2-da2bbb9f-test_protocol_spec.py  m2-f7bc0f8a-test_protocol_spec.py  m3-54bcf09a-test_protocol_spec.py  m3-e8e0bfcb-test_protocol_spec.py  mid-34-test_protocol_spec.py  mid-35-test_protocol_spec.py  mid-36-test_protocol_spec.py  mid-37-test_protocol_spec.py  mid-38-test_protocol_spec.py  mid-39-test_protocol_spec.py  mid-40-test_protocol_spec.py  mid-42-test_protocol_spec.py  mid-43-test_protocol_spec.py  mid-65-test_protocol_spec.py  mid-66-test_protocol_spec.py
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
app/routers/: calculator.py  health.py
arithmetic-service/: .gitignore  Dockerfile  calculator.go  calculator_test.go  go.mod  handlers.go  handlers_test.go  main.go
calculator_api/: __init__.py  config.py  core.py  database.py  main.py  models.py
calculator_api/routes/: __init__.py  calculator.py  health.py
tests/: __init__.py  conftest.py  test_calculator.py  test_calculator_routes.py  test_core.py  test_endpoints.py  test_health.py  test_health_route.py  test_server.py
