[project]
name = "calculator-api"
version = "0.1.0"
description = "A simple calculator REST API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
calculator-api = "app.main:main"

[tool.setuptools]
packages = ["app", "app.routers"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
