[project]
name = "calculator-api"
version = "0.1.0"
description = "A simple calculator REST API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.32.0,<0.33",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[project.scripts]
calculator-api = "calculator_api.main:run"

[tool.setuptools.packages.find]
include = ["calculator_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyright]
typeCheckingMode = "basic"
